packages/yew-macro/tests/hook_attr/hook-must-use-fail.stderr
error: unused implementer of `Hook` that must be used
 --> tests/hook_attr/hook-must-use-fail.rs:6:5
  |
6 |     use_effect_with((), |_| {});
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: hooks do nothing unless called inside a `#[hook]` or `#[component]` function
note: the lint level is defined here
 --> tests/hook_attr/hook-must-use-fail.rs:1:9
  |
1 | #![deny(unused_must_use)]
  |         ^^^^^^^^^^^^^^^
