packages/yew-macro/tests/hook_attr/hook-must-use-fail.rs
#![deny(unused_must_use)]

use yew::prelude::*;

fn not_a_hook() {
    use_effect_with((), |_| {});
}

fn main() {}
